--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+
+
+*.DS_Store
+
+# Ignore Google Service Account credentials JSON file(s)
+google-credentials.json
+# ... including on CI via GitHub Actions
+gha-creds-*.json
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
