--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 
+# https://pip.pypa.io/en/stable/reference/requirement-specifiers/#examples
+
+
 # reading environment vars:
 python-dotenv
 
 # database (google sheets):
-gspread==6.0.2
+gspread >= 6.0.2
 #google-auth==2.28.2
 #google-auth-oauthlib==1.2.0
 
