--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,6 +28,19 @@ jobs:
       with:
         python-version: '3.x'
 
+    # Install pandoc, like brew install pandoc
+    # for markdown to RST conversion (see setup.py file)
+    # https://github.com/pandoc/actions/tree/main/setup
+    - name: Install
+      uses: pandoc/actions/setup@{main}
+      with:
+        version: 2.19
+
+    # pandoc test
+    - name: Run pandoc
+      run: pandoc --version
+
+    # Prep python environment and build the package
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -36,6 +49,7 @@ jobs:
     - name: Build package
       run: python -m build
 
+    # Release the package to PyPI
     - name: Publish package
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       #uses: pypa/gh-action-pypi-publish@release/v1
