--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -4,15 +4,37 @@
 format: jb-book
 root: index
 
-chapters:
-- file: authentication
-- file: queries
-- file: organization
-- file: notebooks/demo_v1_0_5
+#chapters:
+#- file: authentication
+#- file: queries
+#- file: organization
+#- file: notebooks/demo_v1_0_5
+#- file: CONTRIBUTING
+#  title: "Contributing"
+#  sections:
+#    - file: setup/google-cloud
+#    - file: setup/google-sheets
+#    - file: setup/github-actions
 
-- file: CONTRIBUTING
-  title: "Contributing"
-  sections:
-    - file: setup/google-cloud
-    - file: setup/google-sheets
-    - file: setup/github-actions
+parts:
+
+- caption: Usage
+  chapters:
+  - file: authentication
+  - file: queries
+  - file: organization
+
+- caption: Examples
+  chapters:
+  - file: notebooks/demo_v1_0_5
+  - url: https://github.com/prof-rossetti/flask-sheets-template-2024
+    title: Flask Sheets Web Application Template
+
+- caption: Contributing
+  chapters:
+    - file: CONTRIBUTING
+    - file: setup/index
+      sections:
+      - file: setup/google-cloud
+      - file: setup/google-sheets
+      - file: setup/github-actions
