Pandas related documentation

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -23,6 +23,7 @@ parts:
   - file: queries
   - file: authentication
   - file: organization
+  - file: pandas_support
 
 - caption: Examples
   chapters:
