--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -25,11 +25,26 @@ parts:
   - file: organization
   - file: pandas_support
 
+
 - caption: Examples
   chapters:
   - file: notebooks/demo_v1_0_6
   - url: https://github.com/prof-rossetti/flask-sheets-template-2024
     title: Flask Sheets Web Application Template
+
+
+- caption: API
+  chapters:
+  - file: api
+  #- file: api/index
+  #  sections:
+  #  - file: api/base
+  #  - file: api/service
+  #  - file: api/date_parser
+  #  - file: api/hello
+
+
+
 
 - caption: Contributing
   chapters:
