WIP autodoc not working, autodoc2 not working

--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -35,7 +35,8 @@ parts:
 
 - caption: API
   chapters:
-  - file: api
+  #- file: api_rst
+  - file: apidocs/index
   #- file: api/index
   #  sections:
   #  - file: api/base
