--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -31,6 +31,18 @@ parts:
   - url: https://github.com/prof-rossetti/flask-sheets-template-2024
     title: Flask Sheets Web Application Template
 
+- caption: API
+  chapters:
+    #- file: example_rst
+    - file: api/index
+      # turning off sections in sidebar nav, because of toctree on index causes duplicate sidebar nav links
+      #sections:
+      #- file: api/date_parser
+      #- file: api/service
+      #- file: api/base
+      ##options:
+      ##  titlesonly: true
+
 - caption: Contributing
   chapters:
     - file: CONTRIBUTING
