--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -14,6 +14,12 @@ on:
     paths:
     - docs/**
 
+    # make this workflow manually runnable
+    # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#workflow_dispatch
+
+  workflow_dispatch:
+
+
 jobs:
   deploy-book:
     runs-on: ubuntu-latest
