--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -69,10 +69,14 @@ sphinx:
     # builds tables with method names and descriptions
     - 'sphinx.ext.autosummary'
 
-    #- 'sphinx.ext.napoleon'
+    # recognizes google and/or numpy formatted docstrings?
+    - 'sphinx.ext.napoleon'
 
     # add links back to source code:
     - 'sphinx.ext.viewcode'
-  #config:
-  #  add_module_names: False
-  #  #autosummary_generate: True
+  config:
+    #add_module_names: False
+    #autosummary_generate: True
+    # https://www.sphinx-doc.org/en/master/usage/extensions/autodoc.html#configuration
+    autoclass_content: "class" # class, init, both,
+    autodoc_member_order: "groupwise" # alphabetical, bysource, groupwise
