--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -78,5 +78,5 @@ sphinx:
     #add_module_names: False
     #autosummary_generate: True
     # https://www.sphinx-doc.org/en/master/usage/extensions/autodoc.html#configuration
-    autoclass_content: "class" # class, init, both,
+    autoclass_content: "both" # class, init, both,
     autodoc_member_order: "groupwise" # alphabetical, bysource, groupwise
