--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -61,6 +61,9 @@ sphinx:
     # AUTO DOCUMENTATION:
     # https://jupyterbook.org/en/stable/advanced/developers.html#api-reference-from-docstrings
 
+    # https://www.sphinx-doc.org/en/master/usage/extensions/doctest.html
+    #- 'sphinx.ext.doctest'
+
     # https://www.sphinx-doc.org/en/master/usage/extensions/autodoc.html
     # https://www.sphinx-doc.org/en/master/usage/extensions/autodoc.html#configuration
     - 'sphinx.ext.autodoc'
@@ -70,6 +73,7 @@ sphinx:
     #- 'sphinx.ext.autosummary'
 
     # recognizes google and/or numpy formatted docstrings?
+    # https://www.sphinx-doc.org/en/master/usage/extensions/napoleon.html
     - 'sphinx.ext.napoleon'
 
     # add links back to source code:
@@ -78,5 +82,10 @@ sphinx:
     #add_module_names: False
     #autosummary_generate: True
     # https://www.sphinx-doc.org/en/master/usage/extensions/autodoc.html#configuration
-    autoclass_content: "both" # class, init, both,
+    autoclass_content: "class" # "both" # class, init, both,
     autodoc_member_order: "groupwise" # alphabetical, bysource, groupwise
+
+    # napolean config:
+    # https://www.sphinx-doc.org/en/master/usage/extensions/napoleon.html#configuration
+    napoleon_google_docstring: False
+    napoleon_numpy_docstring: True
