--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -5,7 +5,11 @@
 title: gspread-models documentation site
 author: Michael Rossetti
 logo: logo.png
+
+# only build toc files will suppress warnings about a file not being included in a toctree
+# ... however we need this to be false in order for autodoc generated pages to be included in the left sidebar (jupyter-book bug?)
 only_build_toc_files: false
+
 # Patterns to skip when building the book. Can be glob-style (e.g. "*skip.ipynb")
 #exclude_patterns            : [_build, Thumbs.db, .DS_Store, "**.ipynb_checkpoints"]
 
@@ -56,11 +60,35 @@ sphinx:
   extra_extensions:
     # AUTO DOCUMENTATION:
     # https://jupyterbook.org/en/stable/advanced/developers.html#api-reference-from-docstrings
+
+    # https://www.sphinx-doc.org/en/master/usage/extensions/doctest.html
+    #- 'sphinx.ext.doctest'
+
     # https://www.sphinx-doc.org/en/master/usage/extensions/autodoc.html
     # https://www.sphinx-doc.org/en/master/usage/extensions/autodoc.html#configuration
     - 'sphinx.ext.autodoc'
-    #- 'sphinx.ext.napoleon'
-    #- 'sphinx.ext.viewcode'
-  #config:
-  #  add_module_names: False
-  #  #autosummary_generate: True
+
+    # https://www.sphinx-doc.org/en/master/usage/extensions/autosummary.html
+    # builds tables with method names and descriptions
+    #- 'sphinx.ext.autosummary'
+
+    # recognizes google and/or numpy formatted docstrings?
+    # https://www.sphinx-doc.org/en/master/usage/extensions/napoleon.html
+    - 'sphinx.ext.napoleon'
+    #- 'numpydoc'
+
+    # add links back to source code:
+    - 'sphinx.ext.viewcode'
+  config:
+    #add_module_names: False
+    #autosummary_generate: True
+    # https://www.sphinx-doc.org/en/master/usage/extensions/autodoc.html#configuration
+    autoclass_content: "both" # "both" # class, init, both,
+    autodoc_member_order: "groupwise" # alphabetical, bysource, groupwise
+
+    # napolean config:
+    # https://www.sphinx-doc.org/en/master/usage/extensions/napoleon.html#configuration
+    napoleon_google_docstring: False
+    napoleon_numpy_docstring: True
+
+    #numpydoc_validation_checks: "all"
