--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -74,11 +74,11 @@ sphinx:
 
     # recognizes google and/or numpy formatted docstrings?
     # https://www.sphinx-doc.org/en/master/usage/extensions/napoleon.html
-    #- 'sphinx.ext.napoleon'
+    - 'sphinx.ext.napoleon'
     #- 'numpydoc'
 
     # add links back to source code:
-    #- 'sphinx.ext.viewcode'
+    - 'sphinx.ext.viewcode'
   config:
     #add_module_names: False
     #autosummary_generate: True
@@ -88,7 +88,7 @@ sphinx:
 
     # napolean config:
     # https://www.sphinx-doc.org/en/master/usage/extensions/napoleon.html#configuration
-    #napoleon_google_docstring: False
-    #napoleon_numpy_docstring: True
+    napoleon_google_docstring: False
+    napoleon_numpy_docstring: True
 
     #numpydoc_validation_checks: "all"
