--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -54,7 +54,7 @@ jobs:
     # Save the book's HTML contents to the _build directory
     - name: Build the book
       run: |
-        jupyter-book build docs/
+        jupyter-book build docs/ --all
 
     # Upload the book's HTML as an artifact
     - name: Upload artifact
